[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://resources/animActorDead.tres" type="Animation" id=2]
[ext_resource path="res://resources/animActorIdle.tres" type="Animation" id=3]
[ext_resource path="res://resources/animActorWalk.tres" type="Animation" id=4]
[ext_resource path="res://resources/Sprites/Enemy_24x24.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 10 )

[node name="enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="animationPlayer" type="AnimationPlayer" parent="."]
autoplay = "animActorIdle"
anims/animActorDead = ExtResource( 2 )
anims/animActorIdle = ExtResource( 3 )
anims/animActorWalk = ExtResource( 4 )

[node name="twnGray" type="Tween" parent="."]

[node name="twnDespawn" type="Tween" parent="."]

[node name="tmrDespawn" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
hframes = 14
frame = 9

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )
[connection signal="tween_completed" from="twnDespawn" to="." method="_on_twnDespawn_tween_completed"]
[connection signal="timeout" from="tmrDespawn" to="." method="_on_tmrDespawn_timeout"]
